--- a/practice/take_away_review.ipynb
+++ b/practice/take_away_review.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "start_time": "2024-06-05T08:24:55.953248Z"
@@ -25,7 +25,24 @@
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Building prefix dict from the default dictionary ...\n",
+      "DEBUG:jieba:Building prefix dict from the default dictionary ...\n",
+      "Loading model from cache /var/folders/mc/t06t7bmj32zflsscnj8kphfwjl80v8/T/jieba.cache\n",
+      "DEBUG:jieba:Loading model from cache /var/folders/mc/t06t7bmj32zflsscnj8kphfwjl80v8/T/jieba.cache\n",
+      "Loading model cost 0.347 seconds.\n",
+      "DEBUG:jieba:Loading model cost 0.347 seconds.\n",
+      "Prefix dict has been built successfully.\n",
+      "DEBUG:jieba:Prefix dict has been built successfully.\n",
+      "INFO:root:Gaussian Accuracy: 0.685\n",
+      "INFO:root:Logistic regression Accuracy: 0.902\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. split the sentences\n",
     "#  remove the pause words?\n",
@@ -42,7 +59,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.naive_bayes import GaussianNB\n",
     "\n",
-    "REVIEW_DICT = {1: 'good', 0: 'bad'}\n",
+    "REVIEW_DICT = {1: 'positive', 0: 'negative'}\n",
     "\n",
     "\n",
     "def load_stopwords(filepath):\n",
@@ -55,6 +72,7 @@
     "    vocab_set = set()\n",
     "    for i in msgs:\n",
     "        vocab_set |= set(i)\n",
+    "        # vocab_set |= set(i) - stopwords_set\n",
     "    return sorted(list(vocab_set))\n",
     "\n",
     "\n",
@@ -78,61 +96,13 @@
     "vocabulary_set = get_vocabulary_list(take_away_df['words'], stopwords)\n",
     "take_away_vecs = messages_2_vectors(vocabulary_set, take_away_df['words'])\n",
     "X_train, X_test, y_train, y_test = train_test_split(take_away_vecs, take_away_df.loc[:, 'label'], test_size=0.3,\n",
-    "                                                    random_state=42, shuffle=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2024-06-05T08:24:55.953248Z"
-    },
-    "collapsed": false,
-    "is_executing": true,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:Gaussian Accuracy: 0.685\n"
-     ]
-    }
-   ],
-   "source": [
+    "                                                    random_state=42, shuffle=True)\n",
+    "\n",
     "gaussian = GaussianNB()\n",
     "gaussian.fit(X_train, y_train)\n",
     "gaussian_pred = gaussian.predict(X_test)\n",
-    "logging.info(f'Gaussian Accuracy: {round((gaussian_pred == y_test).mean(), 3)}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2024-06-05T08:24:55.953248Z"
-    },
-    "collapsed": false,
-    "is_executing": true,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:Logistic regression Accuracy: 0.902\n"
-     ]
-    }
-   ],
-   "source": [
+    "logging.info(f'Gaussian Accuracy: {round((gaussian_pred == y_test).mean(), 3)}')\n",
+    "\n",
     "logistic = LogisticRegression(random_state=42)\n",
     "logistic.fit(X_train, y_train)\n",
     "logistic_pred = logistic.predict(X_test)\n",
@@ -141,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "start_time": "2024-06-05T08:24:55.953248Z"
@@ -157,7 +127,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:Random Forest Accuracy: 0.884\n"
+      "Building prefix dict from the default dictionary ...\n",
+      "DEBUG:jieba:Building prefix dict from the default dictionary ...\n",
+      "Loading model from cache /var/folders/mc/t06t7bmj32zflsscnj8kphfwjl80v8/T/jieba.cache\n",
+      "DEBUG:jieba:Loading model from cache /var/folders/mc/t06t7bmj32zflsscnj8kphfwjl80v8/T/jieba.cache\n",
+      "Loading model cost 0.365 seconds.\n",
+      "DEBUG:jieba:Loading model cost 0.365 seconds.\n",
+      "Prefix dict has been built successfully.\n",
+      "DEBUG:jieba:Prefix dict has been built successfully.\n"
      ]
     }
    ],
@@ -165,32 +142,8 @@
     "rf = RandomForestClassifier(random_state=42)\n",
     "rf.fit(X_train, y_train)\n",
     "rf_pred = rf.predict(X_test)\n",
-    "logging.info(f'Random Forest Accuracy: {round((rf_pred == y_test).mean(), 3)}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2024-06-05T08:24:55.953248Z"
-    },
-    "collapsed": false,
-    "is_executing": true,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:Voting Ensemble Accuracy: 0.903\n"
-     ]
-    }
-   ],
-   "source": [
+    "logging.info(f'Random Forest Accuracy: {round((rf_pred == y_test).mean(), 3)}')\n",
+    "\n",
     "# ensemble\n",
     "estimator = []\n",
     "estimator.append(('Gaussian', GaussianNB()))\n",
@@ -201,35 +154,8 @@
     "vot_hard = VotingClassifier(estimators=estimator)\n",
     "vot_hard.fit(X_train, y_train)\n",
     "voting_pred = vot_hard.predict(X_test)\n",
-    "logging.info(f'Voting Ensemble Accuracy: {round((voting_pred == y_test).mean(), 3)}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2024-06-05T08:24:55.953248Z"
-    },
-    "collapsed": false,
-    "is_executing": true,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:gaussian: ['good', 'good', 'good', 'good']\n",
-      "INFO:root:Logistic regression predict: ['good', 'bad', 'bad', 'bad']\n",
-      "INFO:root:Random Forest predict: ['good', 'bad', 'good', 'bad']\n",
-      "INFO:root:Voting predict: ['good', 'bad', 'good', 'bad']\n"
-     ]
-    }
-   ],
-   "source": [
+    "logging.info(f'Voting Ensemble Accuracy: {round((voting_pred == y_test).mean(), 3)}')\n",
+    "\n",
     "# test on other review\n",
     "X_test_review = ['口感不错', '口感不错，但送地太慢了', '不太好吃', '味道一般']\n",
     "X_test_seg = [jieba.lcut(x, cut_all=False) for x in X_test_review]\n",
@@ -246,13 +172,6 @@
     "y_voting = vot_hard.predict(X_test_vectors)\n",
     "logging.info(f'Voting predict: {[REVIEW_DICT[i] for i in y_voting]}')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
