--- a/practice/salary_predict.ipynb
+++ b/practice/salary_predict.ipynb
@@ -2,30 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-06-05T10:03:18.011541Z",
-     "start_time": "2024-06-05T10:03:17.209794Z"
-    }
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:{' >50K', ' <=50K'}\n"
+      "INFO:root:Target feature range: {' >50K', ' <=50K'}\n",
+      "INFO:root:Logistic Regression Accuracy: 0.858\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "import logging\n",
+    "\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.decomposition import PCA, TruncatedSVD\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.pipeline import Pipeline\n",
     "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
     "\n",
     "\n",
@@ -36,14 +34,29 @@
     "logging.basicConfig(level=logging.INFO)\n",
     "ENCODER_COLUMNS = ['workclass', 'education', 'marital-status', 'occupation',\n",
     "                   'relationship', 'race', 'sex', 'native-country']\n",
+    "values_to_drop = [' ?']\n",
     "salary_df = pd.read_csv('成人收入预测数据集.csv')\n",
+    "\n",
     "trim_columns = [col.replace(' ', '') for col in salary_df.columns]\n",
     "salary_df = salary_df.set_axis(trim_columns, axis=1)\n",
-    "\n",
+    "# salary_df = salary_df[~salary_df['native-country'].isin(values_to_drop)]\n",
     "# skip fnlwgt\n",
     "use_columns = [col for col in salary_df.columns if col not in ('fnlwgt', 'salary')]\n",
-    "logging.info(set(salary_df.loc[:, 'salary']))\n",
-    "X_train, X_test, y_train, y_test = train_test_split(salary_df.loc[:, use_columns], salary_df.loc[:, 'salary'], test_size=0.2, random_state=42)"
+    "logging.info('Target feature range: %s' % set(salary_df.loc[:, 'salary']))\n",
+    "X_train, X_test, y_train, y_test = train_test_split(salary_df.loc[:, use_columns], salary_df.loc[:, 'salary'],\n",
+    "                                                    test_size=0.2, random_state=42, shuffle=True)\n",
+    "pipeline = Pipeline([\n",
+    "    ('Preprocess', get_column_transformer(ENCODER_COLUMNS)),\n",
+    "    ('Standardization', StandardScaler(with_mean=False)),\n",
+    "    # ('SVD', TruncatedSVD(n_components=90)),\n",
+    "    ('Estimator', LogisticRegression(random_state=42, max_iter=10000))\n",
+    "])\n",
+    "\n",
+    "pipeline.fit(X_train, y_train)\n",
+    "y_pred = pipeline.predict(X_test)\n",
+    "# feature_importance = pipeline.named_steps['Estimator'].feature_importances_\n",
+    "# logging.info(f'Feature Importance: {feature_importance}')\n",
+    "logging.info(f'Logistic Regression Accuracy: {round((y_pred == y_test).mean(), 3)}')"
    ]
   },
   {
@@ -51,8 +64,12 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-05T10:03:18.196216Z",
-     "start_time": "2024-06-05T10:03:18.020806Z"
+     "end_time": "2024-06-05T10:03:18.011541Z",
+     "start_time": "2024-06-05T10:03:17.209794Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
     }
    },
    "outputs": [
@@ -60,23 +77,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:Accuracy: 0.858\n"
+      "INFO:root:Random Forest Accuracy: 0.855\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.pipeline import Pipeline\n",
-    "pipeline = Pipeline([\n",
-    "            ('Preprocess', get_column_transformer(ENCODER_COLUMNS)),\n",
-    "            ('Standardization', StandardScaler(with_mean=False)),\n",
-    "            # ('SVD', TruncatedSVD(n_components=90)),\n",
-    "            ('Estimator', LogisticRegression(max_iter=10000, random_state=42))\n",
-    "        ])\n",
-    "pipeline.fit(X_train, y_train)\n",
-    "y_pred = pipeline.predict(X_test)\n",
-    "# feature_importance = pipeline.named_steps['Estimator'].feature_importances_\n",
-    "# logging.info(f'Feature Importance: {feature_importance}')\n",
-    "logging.info(f'Accuracy: {round((y_pred == y_test).mean(), 3)}')"
+    "def zero_index_features(df, columns_to_reindex):\n",
+    "    for column in columns_to_reindex:\n",
+    "        df[column] = pd.factorize(df[column])[0]\n",
+    "\n",
+    "# tree base model not need feature scaling: onehot, standardization\n",
+    "zero_index_features(salary_df, ENCODER_COLUMNS)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(salary_df.loc[:, use_columns], salary_df.loc[:, 'salary'],\n",
+    "                                                    test_size=0.2, random_state=42, shuffle=True)\n",
+    "rf = RandomForestClassifier(n_estimators=200, random_state=42)\n",
+    "rf.fit(X_train, y_train)\n",
+    "rf_pred = rf.predict(X_test)\n",
+    "logging.info(f'Random Forest Accuracy: {round((rf_pred == y_test).mean(), 3)}')\n"
    ]
   },
   {
