--- a/practice/take_away_review.ipynb
+++ b/practice/take_away_review.ipynb
@@ -14,7 +14,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2024-06-05T08:24:55.953248Z"
+    },
+    "collapsed": false,
+    "is_executing": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# 1. split the sentences\n",
+    "#  remove the pause words?\n",
+    "# 2. vector the segment\n",
+    "# 3. Choose training model: gaussian, train the model and get the accuracy\n",
+    "# 4. predict with the trained model\n",
+    "import logging\n",
+    "\n",
+    "import jieba\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.ensemble import RandomForestClassifier, VotingClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.naive_bayes import GaussianNB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "start_time": "2024-06-05T08:24:55.953248Z"
@@ -44,21 +75,6 @@
     }
    ],
    "source": [
-    "# 1. split the sentences\n",
-    "#  remove the pause words?\n",
-    "# 2. vector the segment\n",
-    "# 3. Choose training model: gaussian, train the model and get the accuracy\n",
-    "# 4. predict with the trained model\n",
-    "import logging\n",
-    "\n",
-    "import jieba\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from sklearn.ensemble import RandomForestClassifier, VotingClassifier\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.naive_bayes import GaussianNB\n",
-    "\n",
     "REVIEW_DICT = {1: 'positive', 0: 'negative'}\n",
     "\n",
     "\n",
