practise on seq2seq

--- a/deep_learning/practice/emotion_analyse.ipynb
+++ b/deep_learning/practice/emotion_analyse.ipynb
@@ -90,82 +90,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 0: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 1: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 2: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 3: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 4: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 5: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 6: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 7: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 8: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 9: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 10: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 11: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 12: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 13: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 14: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 15: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 16: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 17: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 18: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 19: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 20: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 21: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 22: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 23: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 24: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 25: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 26: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 27: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 28: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 29: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 30: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 31: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 32: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 33: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 34: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 35: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 36: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 37: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 38: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 39: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 40: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 41: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 42: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 43: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 44: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 45: train loss: 0.0, test loss: 0.0\n",
-      "Epoch: 46: train loss: 0.0, test loss: 0.0\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "ename": "TypeError",
+     "evalue": "__init__() got an unexpected keyword argument 'pad_index'",
      "output_type": "error",
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[27], line 30\u001B[0m\n\u001B[1;32m     28\u001B[0m     loss\u001B[38;5;241m.\u001B[39mbackward()\n\u001B[1;32m     29\u001B[0m     optimizer\u001B[38;5;241m.\u001B[39mstep()\n\u001B[0;32m---> 30\u001B[0m train_loss \u001B[38;5;241m=\u001B[39m \u001B[43mget_loss\u001B[49m\u001B[43m(\u001B[49m\u001B[43mtake_away_train_dataloader\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     31\u001B[0m test_loss \u001B[38;5;241m=\u001B[39m get_loss(take_away_test_dataloader)  \u001B[38;5;66;03m# test not need train\u001B[39;00m\n\u001B[1;32m     32\u001B[0m train_losses\u001B[38;5;241m.\u001B[39mappend(train_loss)\n",
-      "Cell \u001B[0;32mIn[27], line 13\u001B[0m, in \u001B[0;36mget_loss\u001B[0;34m(dataloader)\u001B[0m\n\u001B[1;32m     11\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m torch\u001B[38;5;241m.\u001B[39mno_grad():\n\u001B[1;32m     12\u001B[0m     \u001B[38;5;28;01mfor\u001B[39;00m x, y \u001B[38;5;129;01min\u001B[39;00m dataloader:\n\u001B[0;32m---> 13\u001B[0m         y_pred \u001B[38;5;241m=\u001B[39m \u001B[43mcustomized_model\u001B[49m\u001B[43m(\u001B[49m\u001B[43mx\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     14\u001B[0m         loss \u001B[38;5;241m=\u001B[39m loss_fun(y_pred, y)\n\u001B[1;32m     15\u001B[0m         losses\u001B[38;5;241m.\u001B[39mappend(loss\u001B[38;5;241m.\u001B[39mitem())\n",
-      "File \u001B[0;32m~/code_repository/git_project/ml_courses/venv/lib/python3.8/site-packages/torch/nn/modules/module.py:1532\u001B[0m, in \u001B[0;36mModule._wrapped_call_impl\u001B[0;34m(self, *args, **kwargs)\u001B[0m\n\u001B[1;32m   1530\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_compiled_call_impl(\u001B[38;5;241m*\u001B[39margs, \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs)  \u001B[38;5;66;03m# type: ignore[misc]\u001B[39;00m\n\u001B[1;32m   1531\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[0;32m-> 1532\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_call_impl\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[0;32m~/code_repository/git_project/ml_courses/venv/lib/python3.8/site-packages/torch/nn/modules/module.py:1541\u001B[0m, in \u001B[0;36mModule._call_impl\u001B[0;34m(self, *args, **kwargs)\u001B[0m\n\u001B[1;32m   1536\u001B[0m \u001B[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001B[39;00m\n\u001B[1;32m   1537\u001B[0m \u001B[38;5;66;03m# this function, and just call forward.\u001B[39;00m\n\u001B[1;32m   1538\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m (\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_backward_hooks \u001B[38;5;129;01mor\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_backward_pre_hooks \u001B[38;5;129;01mor\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_forward_hooks \u001B[38;5;129;01mor\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_forward_pre_hooks\n\u001B[1;32m   1539\u001B[0m         \u001B[38;5;129;01mor\u001B[39;00m _global_backward_pre_hooks \u001B[38;5;129;01mor\u001B[39;00m _global_backward_hooks\n\u001B[1;32m   1540\u001B[0m         \u001B[38;5;129;01mor\u001B[39;00m _global_forward_hooks \u001B[38;5;129;01mor\u001B[39;00m _global_forward_pre_hooks):\n\u001B[0;32m-> 1541\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mforward_call\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m   1543\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[1;32m   1544\u001B[0m     result \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;01mNone\u001B[39;00m\n",
-      "File \u001B[0;32m~/code_repository/git_project/ml_courses/deep_learning/practice/SimpleRNN.py:29\u001B[0m, in \u001B[0;36mforward\u001B[0;34m(self, x)\u001B[0m\n\u001B[1;32m     25\u001B[0m def forward(self, x):\n\u001B[1;32m     26\u001B[0m     # [seq_len, batch_size] --> [seq_len, batch_size, embedding_dim]\n\u001B[1;32m     27\u001B[0m     x = self.embed(x)\n\u001B[1;32m     28\u001B[0m     # out: [seq_len, batch_size, embedding_dim]\n\u001B[0;32m---> 29\u001B[0m     # hn: [1, batch_size, embedding_dim]\n\u001B[1;32m     30\u001B[0m     out, hn = self.rnn(x)\n\u001B[1;32m     31\u001B[0m     # [1, batch_size, embedding_dim] --> [batch_size, embedding_dim]\n",
-      "File \u001B[0;32m~/code_repository/git_project/ml_courses/venv/lib/python3.8/site-packages/torch/nn/modules/module.py:1532\u001B[0m, in \u001B[0;36mModule._wrapped_call_impl\u001B[0;34m(self, *args, **kwargs)\u001B[0m\n\u001B[1;32m   1530\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_compiled_call_impl(\u001B[38;5;241m*\u001B[39margs, \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs)  \u001B[38;5;66;03m# type: ignore[misc]\u001B[39;00m\n\u001B[1;32m   1531\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[0;32m-> 1532\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_call_impl\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[0;32m~/code_repository/git_project/ml_courses/venv/lib/python3.8/site-packages/torch/nn/modules/module.py:1541\u001B[0m, in \u001B[0;36mModule._call_impl\u001B[0;34m(self, *args, **kwargs)\u001B[0m\n\u001B[1;32m   1536\u001B[0m \u001B[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001B[39;00m\n\u001B[1;32m   1537\u001B[0m \u001B[38;5;66;03m# this function, and just call forward.\u001B[39;00m\n\u001B[1;32m   1538\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m (\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_backward_hooks \u001B[38;5;129;01mor\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_backward_pre_hooks \u001B[38;5;129;01mor\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_forward_hooks \u001B[38;5;129;01mor\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_forward_pre_hooks\n\u001B[1;32m   1539\u001B[0m         \u001B[38;5;129;01mor\u001B[39;00m _global_backward_pre_hooks \u001B[38;5;129;01mor\u001B[39;00m _global_backward_hooks\n\u001B[1;32m   1540\u001B[0m         \u001B[38;5;129;01mor\u001B[39;00m _global_forward_hooks \u001B[38;5;129;01mor\u001B[39;00m _global_forward_pre_hooks):\n\u001B[0;32m-> 1541\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mforward_call\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m   1543\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[1;32m   1544\u001B[0m     result \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;01mNone\u001B[39;00m\n",
-      "File \u001B[0;32m~/code_repository/git_project/ml_courses/venv/lib/python3.8/site-packages/torch/nn/modules/rnn.py:586\u001B[0m, in \u001B[0;36mRNN.forward\u001B[0;34m(self, input, hx)\u001B[0m\n\u001B[1;32m    584\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m batch_sizes \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m:\n\u001B[1;32m    585\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mmode \u001B[38;5;241m==\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mRNN_TANH\u001B[39m\u001B[38;5;124m'\u001B[39m:\n\u001B[0;32m--> 586\u001B[0m         result \u001B[38;5;241m=\u001B[39m \u001B[43m_VF\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mrnn_tanh\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;28;43minput\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mhx\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_flat_weights\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mbias\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mnum_layers\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    587\u001B[0m \u001B[43m                              \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mdropout\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mtraining\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mbidirectional\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    588\u001B[0m \u001B[43m                              \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mbatch_first\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    589\u001B[0m     \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[1;32m    590\u001B[0m         result \u001B[38;5;241m=\u001B[39m _VF\u001B[38;5;241m.\u001B[39mrnn_relu(\u001B[38;5;28minput\u001B[39m, hx, \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_flat_weights, \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mbias, \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mnum_layers,\n\u001B[1;32m    591\u001B[0m                               \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mdropout, \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mtraining, \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mbidirectional,\n\u001B[1;32m    592\u001B[0m                               \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mbatch_first)\n",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
+      "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[29], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m customized_model \u001B[38;5;241m=\u001B[39m \u001B[43mSimpleRNN\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdict_len\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m11010\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43membedding_dim\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m300\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mn_classes\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m1\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mpad_index\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mpad_index\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m      2\u001B[0m epochs \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m100\u001B[39m\n\u001B[1;32m      3\u001B[0m learning_rate \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m1e-2\u001B[39m  \u001B[38;5;66;03m# gradient explosion, need preprocess data, then lower the lr\u001B[39;00m\n",
+      "\u001B[0;31mTypeError\u001B[0m: __init__() got an unexpected keyword argument 'pad_index'"
      ]
     }
    ],
    "source": [
-    "customized_model = SimpleRNN(dict_len=11010, embedding_dim=300, n_classes=1, pad_index=pad_index)\n",
+    "customized_model = SimpleRNN(dict_len=11010, embedding_dim=100, n_classes=1)\n",
     "epochs = 100\n",
     "learning_rate = 1e-2  # gradient explosion, need preprocess data, then lower the lr\n",
     "loss_fun = nn.BCEWithLogitsLoss()\n",
@@ -205,8 +145,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-15T02:49:38.753963Z",
-     "start_time": "2024-07-15T02:37:37.915583Z"
+     "end_time": "2024-07-15T03:14:17.364477Z",
+     "start_time": "2024-07-15T03:14:17.333426Z"
     }
    }
   },
