--- a/aigc/langchain/L1-Model_prompt_parser.ipynb
+++ b/aigc/langchain/L1-Model_prompt_parser.ipynb
@@ -261,7 +261,7 @@
    "source": [
     "from langchain.prompts import ChatPromptTemplate\n",
     "\n",
-    "prompt_template = ChatPromptTemplate.from_template(template_string)\n"
+    "prompt_tpemplate = ChatPromptTemplate.from_template(template_string)\n"
    ]
   },
   {
